--- a/css/style.css
+++ b/css/style.css
@@ -197,3 +197,13 @@ body {
     }
 
 }
+
+.sub-header{
+    font-size: 1.2rem;
+    margin: 0px;
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-color: #000000;
+    text-decoration-thickness: 3px;
+    text-underline-offset:3px; 
+}
