--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+img {
+    pointer-events: none;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -109,6 +113,8 @@ body {
 .hashnode-icon {
     max-width: 18px;
     height: auto;
+    vertical-align: middle;
+    display: inline-block;
 }
 /* Main content */
 .content {
